[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "future_positional_only"
version = "0.0.1"
authors = [
    {name = "C.M.T. Robert"},
]
description = "Set defaults for any positional-only parameter"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
strict = true
